# Ontology-Metadata

./: .cruft.json  .gitignore  404.html  CONTRIBUTING.md  Makefile  README.md  about.yaml  index.html  mkdocs.yml  project.Makefile  pyproject.toml  sitemap.xml
Agent/: index.html
AllotropePermittedProfile/: index.html
AllotropeRequiredProfile/: index.html
Annotation/: index.html
AnnotationProperty/: index.html
AnnotationPropertyMixin/: index.html
Anonymous/: index.html
AnonymousClassExpression/: index.html
Any/: index.html
Axiom/: index.html
Boolean/: index.html
CURIELiteral/: index.html
Class/: index.html
ClassExpression/: index.html
Curie/: index.html
Date/: index.html
DateOrDatetime/: index.html
Datetime/: index.html
Decimal/: index.html
DefinitionConstraintComponent/: index.html
Double/: index.html
Expression/: index.html
Float/: index.html
GoPermittedProfile/: index.html
GoRecommendedProfile/: index.html
GoRequiredProfile/: index.html
HasCategory/: index.html
HasLifeCycle/: index.html
HasMappings/: index.html
HasMinimalMetadata/: index.html
HasProvenance/: index.html
HasSynonyms/: index.html
HasUserInformation/: index.html
HomoSapiens/: index.html
IEDB_alternative_term/: index.html
ISA_alternative_term/: index.html
Image/: index.html
Integer/: index.html
IriType/: index.html
LabelType/: index.html
NCIT_definition_source/: index.html
NCIT_term_source/: index.html
NCIT_term_type/: index.html
NamedIndividual/: index.html
NamedObject/: index.html
NamedThing/: index.html
(+481 files in other folders)
